# koji-adjutant

./: .cursorrules  .gitignore  Makefile  PACKAGING.md  PACKAGING_CHANGES.md  README.md  SESSION_SUMMARY.md  setup.cfg  setup.py
.cursor/rules/: 001_strategic_planner.mdc  002_systems_architect.mdc  003_implementation_lead.mdc  004_container_engineer.mdc  005_quality_engineer.mdc
docs/: PERSONALITIES.md  PROJECT_STATUS.md  WORKFLOW.md  production-readiness-checklist.md
docs/architecture/decisions/: 0001-container-lifecycle.md  0002-container-image-and-security.md  0003-hub-policy-image-selection.md  0004-production-buildroot-images.md  0005-operational-monitoring-server.md  0006-srpm-task-adapters.md
docs/implementation/: phase2.1-implementation-summary.md  phase2.1-quality-validation.md  phase2.2-exec-pattern-fix-report.md  phase2.4-acceptance-criteria-validation.md  phase2.4-completion-report.md  phase2.4-performance-baseline.md  phase2.4-test-coverage-analysis.md  phase2.5-completion-report.md  phase2.5-performance-baseline.md  phase2.5-test-coverage-analysis.md
docs/implementation/tests/: phase1-smoke.md
docs/monitoring/: web-ui.md
docs/planning/: bootstrap_session.md  kojid-task-migration-analysis.md  kubernetes-adapter-feasibility.md  phase1-completion-summary.md  phase2-feature-additions-summary.md  phase2-roadmap.md  phase2.2-exec-pattern-impact-analysis.md  phase2.5-index.md  phase2.5-roadmap.md  phase2.5-srpm-adapters-design.md  phase2.5-stakeholder-brief.md  status-update-2025-10-31-srpm-gap.md  strategic-planner-improvements.md
docs/planning/handoffs/: monitoring-web-ui-to-webdev.md  phase1-to-implementation-lead.md  phase2.5-to-implementation-lead.md  phase2.5-week2-to-implementation-lead.md  phase2.5-week3-to-quality-engineer.md
koji_adjutant/: config.py  kojid.py
koji_adjutant/buildroot/: __init__.py  dependencies.py  environment.py  initializer.py  repos.py
koji_adjutant/container/: __init__.py  interface.py  podman_manager.py
koji_adjutant/monitoring/: __init__.py  registry.py  server.py
koji_adjutant/policy/: __init__.py  resolver.py
koji_adjutant/task_adapters/: __init__.py  base.py  buildarch.py  buildsrpm_scm.py  createrepo.py  logging.py  rebuild_srpm.py
koji_adjutant/task_adapters/scm/: __init__.py  base.py  git.py
koji_adjutant/web/: __init__.py  routes.py
koji_adjutant/web/static/css/: style.css
koji_adjutant/web/static/js/: dashboard.js
koji_adjutant/web/templates/: base.html  container_details.html  dashboard.html  task_details.html
tests/integration/: QUICK_START.md  README.md  TEST_EXECUTION_REPORT.md  VALIDATED_AC_SUMMARY.md  phase2_acceptance_criteria.md  test_buildsrpm_scm_integration.py  test_complete_workflow.py  test_exec_pattern.py  test_monitoring_server.py  test_phase1_smoke.py  test_phase2_policy.py  test_phase2_policy_execution_report.md  test_rebuild_srpm_integration.py
tests/manual/: validate_exec_pattern.py
tests/unit/: __init__.py  test_buildroot_initializer.py  test_buildsrpm_scm_adapter.py  test_config.py  test_container_exec.py  test_monitoring.py  test_policy.py  test_rebuild_srpm_adapter.py  test_scm_handlers.py
